Update team descriptions

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -32,8 +32,8 @@
       "governance": "Governance Advocate"
     },
     "bios": {
-      "jose": "Jose's bio...",
-      "fernando": "Fernando's bio..."
+      "jose": "Political Science student at Universidad de los Andes with a focus on public policy and economics. This semester, he will intern at the Digital Development Directorate of the National Planning Department. He is interested in contributing to the development and safe deployment of artificial intelligence, striving to make this technology a force for progress in developing countries like Colombia.",
+      "fernando": "Artificial Intelligence Risk Analyst at the Observatory of Global Catastrophic Risks (ORCG) and a Systems Engineering graduate from Universidad de los Andes. His interest in artificial intelligence lies in its tremendous impact on the economy and technology, making it crucial to ensure that this impact is safe. Fernando is committed to fostering the responsible development of AI, ensuring that this technology becomes a tool for sustainable and equitable progress worldwide."
     }
   },
   "contact": {
