--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -28,12 +28,12 @@
       "founder": "Cofundador"
     },
     "areas": {
-      "alignment": "Divulgador en seguridad técnica",
-      "governance": "Divulgador en gobernanza"
+      "alignment": "Experto en seguridad técnica",
+      "governance": "Experto en gobernanza"
     },
     "bios": {
-      "jose": "Bio de Jose...",
-      "fernando": "Bio de Fernando..."
+      "jose": "Estudiante de Ciencia Política en la Universidad de los Andes con un enfoque en políticas públicas y economía. Este semestre realizará una pasantía en la Dirección de Desarrollo Digital del Departamento Nacional de Planeación. Está interesado en trabajar por el desarrollo y el despliegue seguro de la inteligencia artificial, buscando que esta tecnología sea una fuerza para el progreso en países en vías de desarrollo como Colombia.",
+      "fernando": "Analista en Riesgos de Inteligencia Artificial en el Observatorio de Riesgos Catastróficos Globales (ORCG) y egresado de Ingeniería de Sistemas de la Universidad de los Andes. Su interés en la inteligencia artificial radica en su tremendo impacto en la economía y la tecnología, lo que hace crucial garantizar que dicho impacto sea seguro. Fernando trabaja con el objetivo de promover el desarrollo responsable de la IA, asegurando que esta tecnología sea una herramienta para el progreso sostenible y equitativo a nivel global."
     }
   },
   "contact": {
