--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -3,7 +3,8 @@
     "home": "Home",
     "team": "Team",
     "contact": "Contact",
-    "getInvolved": "Get Involved"
+    "getInvolved": "Get Involved",
+    "archive": "Archive"
   },
   "hero": {
     "title": "Driving AI Safety Forward in Colombia",
