--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -3,7 +3,8 @@
     "home": "Inicio",
     "team": "Equipo",
     "contact": "Contacto",
-    "getInvolved": "Invólucrate"
+    "getInvolved": "Invólucrate",
+    "archive": "Archivo"
   },
   "hero": {
     "title": "Impulsando el futuro seguro de la IA en Colombia",
